<resources>
    <string name="app_name">PSIM_Mobile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_add_content">AddContentActivity</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="content">Content</string>
    <string name="attachment">Attachment</string>
    <string name="add">Add</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="tags_or_keywords">Tags or Keywords</string>
    <string name="search">Search</string>

    <string name="board">Board</string>

    //-------------------------------------------------
    <string name="popular_tags">Popular tags will be displayed here</string>

</resources>
