<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>




    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="14dp"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/editText2"
        android:hint="@string/tags"
        android:inputType="textMultiLine"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/editText3"
        android:layout_above="@+id/button"
        android:hint="@string/content"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@id/button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:text="@string/attachment"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentRight="true"
        android:text="@string/add"/>


</RelativeLayout>
